updated the functionality and added app script to it
